--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start",
     "start": "node server.js"
   },
   "author": "Tarek",
@@ -23,13 +23,21 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.23.1",
+    "expect": "^1.20.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "foundation-sites": "^6.3.0",
     "jquery": "^2.2.1",
-    "script-loader": "^0.6.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^2.3.3",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.2.0",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
-    "extract-text-webpack-plugin": "^2.1.0"
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^2.3.3"
   }
 }
